--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
+
   "name": "cards",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && type nul > out\\.nojekyll",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "export": "next export",
+    "deploy": "npm run build && gh-pages -d out",
+    "build:deploy": "next build && node scripts/copy-assets.js && gh-pages -d out",
+    "postbuild": "node scripts/copy-assets.js && node scripts/flatten-rsc.js",
+    "flatten-rsc": "node scripts/flatten-rsc.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -26,6 +32,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
